Fixed broken css on list boarders first child

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -32,6 +32,6 @@ dl {
     padding: 10px 20px 10px 0;
     border-bottom: 1px solid red;
   }
-  .table-list li &:first-child {
+  .table-list li:first-child {
     border-top: 1px solid #bfc1c3;
   }
